<resources>
    <string name="app_name">Graduation Project</string>

    <string name="title_porsche">Your dream sports car </string>
    <string name="title_lamborghini">Premium car rental</string>
    <string name="title_classic">for your wedding day </string>

    <string name="desc_porsche"> Find the perfect sports car for you  </string>
    <string name="desc_lamborghini"> Rent the car of your dreams with home delivery </string>
    <string name="desc_classic"> Find the classic car for your wedding day </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="forget_your_password">FORGET YOUR PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="you_don_t_have_an_account">You Don\'t Have An Account?</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="signup">SIGNUP</string>
    <string name="skip">Skip</string>
    <string name="send_recovery_email">SEND RECOVERY EMAIL</string>
    <string name="lamborghini">lamborghini</string>
    <string name="description">description</string>
    <string name="user_name">Username</string>
    <string name="info_android_com">info@android.com</string>
    <string name="title_activity_progress_button_style">ProgressButtonStyle</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Date_of_Birth">Date Of Birth</string>
    <string name="title_activity_progress_button2">ProgressButton2</string>


    <string name="add_card">ADD card</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="confirmation">Confirmation</string>
    <string name="thank_you_n_for_reservation">Thank you \n for Reservation</string>
    <string name="your_booking_has_been_confirmed_for">Your booking has been confirmed for</string>
    <string name="home_page">Home page</string>
    <string name="car_name">Car Name</string>
    <string name="more">more</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="address">Address</string>
    <string name="return_loctaion">Return Location</string>
    <string name="pick_up_date">Pick-up date</string>
    <string name="return_date">Return date</string>
    <string name="date">date</string>
    <string name="additional_driver">ADDITIONAL DRIVER</string>
    <string name="_10jd_day">10JD/Day</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="total">TOTAL</string>
    <string name="make_payment">Make Payment</string>
    <string name="payment">Payment</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="jd">JD</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_code">CVV Code</string>
    <string name="confirm">Confirm</string>
    <string name="recover_password">RECOVER PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="seats"> Seats</string>
    <string name="doors">Doors</string>
    <string name="bags">Bags</string>
    <string name="jd_day">JD/Day</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="messages">Messages</string>
    <string name="feedback_or_any_other_observation">(feedback or any other observation )</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="send">Send</string>
    <string name="my_profile">My Profile</string>
    <string name="continue_">continue</string>
    <string name="rate_us">Rate Us</string>
    <string name="homepage">HomePage</string>
    <string name="profile">Profile</string>
    <string name="booking">Booking</string>
    <string name="setting">Setting</string>
    <string name="share">SHARE</string>
    <string name="logout">Logout</string>
    <string name="latest_bookings">Latest bookings</string>
    <string name="there_is_no_any_booking_yet">There is no any booking yet!</string>
    <string name="pick_up_location_">Pick-Up location:</string>
    <string name="return_location_">Return location:</string>
    <string name="pick_up_date_">Pick-Up date:</string>
    <string name="return_date_">Return date:</string>
    <string name="with_driver_">With driver:</string>
    <string name="add_promo_code">Add promo code</string>


</resources>