<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ConfirmationActivity">


    <ImageView
        android:id="@+id/back_confirmation"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/back_confirmation"
        android:text="@string/confirmation"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/handshake_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/handshake" />

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handshake_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/thank_you_n_for_reservation"
        android:textColor="@color/text_color"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thankyou"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/your_booking_has_been_confirmed_for"
        android:textColor="@color/text_color_hint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/details_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_color_hint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/homepage_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/gold"
        android:text="@string/home_page"
        android:textColor="@color/white" />

</RelativeLayout>