<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forget_pass_dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/gray"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_reset"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">


        <EditText
            android:id="@+id/email_forget"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/raleway_mediumitalic"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/reset_my_password"
        android:textColor="@color/black" />

</LinearLayout>