<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".PaymentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_payment" />

    <ImageView
        android:id="@+id/back_payment"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/back_white"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/back_payment"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/total_price"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/jd"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/price_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="00.00"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_card"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/p1"
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/card_number"
            android:textColorHint="@color/text_color"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableEnd="@drawable/visa"
                android:inputType="phone"
                android:maxLength="19"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/p2"
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/p1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/card_holder_name"
            android:textColorHint="@color/text_color"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/p3"
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/expiry_date"
            android:textColorHint="@color/text_color"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiry_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:inputType="date"
                android:maxLength="5"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/cvv_code"
            android:textColorHint="@color/text_color"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvv_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableEnd="@drawable/cvv"
                android:inputType="number"
                android:maxLength="3"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/confirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/gold"
        android:text="@string/confirm"
        android:textColor="@color/white" />


</RelativeLayout>