<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:theme="@style/Theme.AppCompat.Light">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/recover_password"
        android:textColor="@color/text_color_hint"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/cancel_changePassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/cancel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:textColorHint="@color/text_color_hint"
            app:hintTextColor="@color/text_color_hint">

            <com.subhrajyoti.passwordview.PasswordView
                android:id="@+id/oldPassword_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/raleway_mediumitalic"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/text_color"
                app:eyeTint="@color/gold"
                app:strikeThrough="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/new_password"
            android:textColorHint="@color/text_color_hint"
            app:hintTextColor="@color/text_color_hint">

            <com.subhrajyoti.passwordview.PasswordView
                android:id="@+id/newPassword_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/raleway_mediumitalic"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/text_color"
                app:eyeTint="@color/gold"
                app:strikeThrough="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/re_password"
            android:textColorHint="@color/text_color_hint"
            app:hintTextColor="@color/text_color_hint">

            <com.subhrajyoti.passwordview.PasswordView
                android:id="@+id/RePassword_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/raleway_mediumitalic"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/text_color"
                app:eyeTint="@color/gold"
                app:strikeThrough="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changePassword_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gold"
            android:text="@string/change_password"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>