<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road5"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".LoginActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/skip"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        android:text="skip"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="30sp" />-->

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_login"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/warmtxt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/design_default_color_error" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableStart="@drawable/ic_person"
                android:fontFamily="@font/raleway_mediumitalic"
                android:gravity="center"
                android:inputType="text"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/warmtxt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/design_default_color_error" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white">

            <com.subhrajyoti.passwordview.PasswordView
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/ic_lock"
                android:fontFamily="@font/raleway_mediumitalic"
                android:gravity="center"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:eyeTint="#efde98"
                app:strikeThrough="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forget_your_password"
            android:textColor="@color/white" />


    </LinearLayout>

    <include
        android:id="@+id/ProgressButton_login"
        layout="@layout/activity_progress_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ProgressButton_login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/you_don_t_have_an_account"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ProgressButton_login"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/have"
        android:text="@string/sign_up"
        android:textColor="#efde98"
        android:textStyle="bold" />


</RelativeLayout>