<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_walkthrough"
    tools:context=".WalkthroughActivity">


    <Button
        android:id="@+id/walkthrough_skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#00000000"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/walkthroughPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="100dp">

    </androidx.viewpager.widget.ViewPager>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="202dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-92dp"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/tire" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="202dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-92dp"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/tire" />

    <Button
        android:id="@+id/walkthrough_signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:background="#00000000"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:visibility="gone" />


    <Button
        android:id="@+id/walkthrough_loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-8dp"
        android:background="#00000000"
        android:text="@string/login"
        android:textColor="@color/white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="89dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="43dp"
        android:orientation="horizontal">


    </LinearLayout>


</RelativeLayout>